--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
       <article>
         <h3>🌱 Reflorestamento</h3>
         <p>Trabalhamos no plantio de árvores em áreas degradadas para restaurar ecossistemas.</p>
-        <img src="c:\Users\felip\Downloads\imagem_noticia___r-jpg___r__camargo__ambiental__1515430187__0801182018104947.jpg" alt="Reflorestamento de áreas degradadas">
+        <img src="c:\Users\felip\Downloads\imagem_noticia___r-jpg___r__camargo__ambiental__1515430187__0801182018104947.jpg" alt="Reflorestamento de áreas degradadas"style="width:900px;height:400px;">
       </article>
 
       <article>
         <h3>♻️ Reciclagem</h3>
         <p>Realizamos campanhas para incentivar a coleta seletiva e o reaproveitamento de materiais.</p>
-        <img src="c:\Users\felip\Downloads\simbolo-da-reciclagem.jpg" alt="Reciclagem de materiais">
+        <img src="c:\Users\felip\Downloads\simbolo-da-reciclagem.jpg" alt="Reciclagem de materiais"style="width:900px;height:400px;">
       </article>
 
       <article>
         <h3>🌍 Educação Ambiental</h3>
         <p>Promovemos palestras e oficinas em escolas para despertar a consciência ambiental desde cedo.</p>
-        <img src="c:\Users\felip\Downloads\image.jpg" alt="Educação ambiental em escolas">
+        <img src="c:\Users\felip\Downloads\image.jpg" alt="Educação ambiental em escolas"style="width:900px;height:400px;">
       </article>
     </section>
   </main>
