--- a/sobre.html
+++ b/sobre.html
@@ -24,22 +24,26 @@
     <section>
       <h2>Quem Somos</h2>
       <p>A ONG Vida Verde foi fundada em 2010 a partir do sonho de unir pessoas em prol da preservação ambiental. Desde então, trabalhamos com projetos de reflorestamento de áreas degradadas, campanhas de reciclagem, oficinas em escolas e ações comunitárias que inspiram mudanças positivas.</p>
-      <img src="c:\Users\felip\Downloads\feche-a-foto-da-mao-segurando-o-plantio-da-muda-da-planta_1150-28360.jpg" alt="Voluntários da ONG Vida Verde plantando árvores">
+      <img src="c:\Users\felip\Downloads\feche-a-foto-da-mao-segurando-o-plantio-da-muda-da-planta_1150-28360.jpg" alt="Voluntários da ONG Vida Verde plantando árvores"style="width:900px;height:400px;">
     </section>
 
     <section>
       <h2>Missão</h2>
-      <p>Proteger a natureza e promover a consciência ambiental.</p>
+      <p>Promover a preservação ambiental por meio de ações de conscientização, educação ecológica e projetos sustentáveis que incentivem a sociedade a adotar práticas responsáveis em favor de um futuro mais verde e equilibrado..</p>
     </section>
 
     <section>
       <h2>Visão</h2>
-      <p>Ser referência em sustentabilidade, incentivando práticas que garantam qualidade de vida para as futuras gerações.</p>
+      <p>Ser referência em sustentabilidade no Brasil, inspirando comunidades e organizações a construírem um mundo mais consciente, justo e ambientalmente equilibrado para as futuras gerações.</p>
     </section>
 
     <section>
       <h2>Valores</h2>
-      <p>Respeito à vida, solidariedade, educação, sustentabilidade e responsabilidade social.</p>
+      </p>🌱 Respeito à vida em todas as suas formas</p>
+<p> 🤝 Solidariedade com as pessoas e o planeta.<p>
+ <p>📚 Educação ambiental como ferramenta de transformação. <p>
+ </P>🌍 Sustentabilidade em cada ação. <p>
+</p>✅ Responsabilidade social para um futuro mais justo e verde.</p>
     </section>
 
     <p>🌍 Cada atitude conta. Pequenas ações somadas geram grandes transformações!</p>
